test: for departements endpoints